# pdf2remarkable

./: README.md  pyproject.toml
src/: kindle2pdf.py
